@@ -2359,7 +2359,7 @@ Sets noblock-mode.
 .IPs device=<device>
 Sets the device name.
 Replace any ',' with '.' and any ':' with '=' in the ALSA device name.
-Make sure you do not set this when you want hwac3 output via S/PDIF, unless
+For hwac3 output via S/PDIF, use an "iec958" or "spdif" device, unless
 you really know how to set it correctly.
 .RE
 .PD 1
